--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,7 @@ Revision 2.6.1 (unknown):
     - Removed "OverflowWarning" (removed in Python 2.5);
     - Added option "python_print_as_function" for highlight "print" as a
       function;
+    - Added support for new integer literal syntax "0o" and "0b";
 
 Revision 2.5.6 (2007-02-04):
 
