--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,6 +9,8 @@ Revision 2.6.1 (unknown):
     - Added option "python_print_as_function" for highlight "print" as a
       function;
     - Added support for new integer literal syntax "0o" and "0b";
+    - Added support for string.Template syntax controlled by
+      "python_highlight_string_templates" option;
 
 Revision 2.5.6 (2007-02-04):
 
