--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,6 +11,8 @@ Revision 2.6.1 (unknown):
     - Added support for new integer literal syntax "0o" and "0b";
     - Added support for string.Template syntax controlled by
       "python_highlight_string_templates" option;
+    - Added support for str.format syntax controlled by
+      "python_highlight_string_format" option;
 
 Revision 2.5.6 (2007-02-04):
 
