Added support for b'...' syntax

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 Now
 ===
 
+- (Python 3.0) support for b"..." syntax and remove u"..." syntax;
+
+- (Python 3.0) add new bultins and exceptions;
+
 Later
 =====
 
