--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Revision 2.6.2 (2008-09-?):
+
+    - Added support for b"..." syntax;
+
 Revision 2.6.1 (2008-09-21):
 
     - Added new builtins and exceptions introduced in Python 2.6: "bin",
