--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,5 +1,6 @@
 Revision 3.0.0 (2008-09-?):
 
+    - Removed trailing 'L' support for all numbers;
     - Updated support for str.format;
     - Added new builtins introduced in Python 2.6: "ascii", "exec",
       "memoryview", "print";
