Set release date

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,7 +8,7 @@ Revision 3.0.0 (2008-09-?):
       "execfile", "file", "help", "intern", "long", "raw_input", "reduce",
       "reload", "unichr", "unicode", "xrange";
 
-Revision 2.6.2 (2008-09-?):
+Revision 2.6.2 (2008-09-22):
 
     - Added "VMSError" exception;
     - Added support for b"..." syntax;
