Trailing 'L' removal was in wrong file

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -8,6 +8,11 @@ Revision 3.0.0 (2008-09-?):
       "execfile", "file", "help", "intern", "long", "raw_input", "reduce",
       "reload", "unichr", "unicode", "xrange";
 
+Revision 2.6.3 (2008-09-29):
+
+    - Return back trailing 'L' support for numbers. Actually it was changed for
+      future Python 3.0 syntax but in wrong file;
+
 Revision 2.6.2 (2008-09-22):
 
     - Added "VMSError" exception;
