--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,10 @@
 Now
 ===
 
+- When we check spelling we don't need to check the whole strings only the
+  content. For example we don't need to check 'u' for spelling in strings
+  like this: u"Some text";
+
 Later
 =====
 
