--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Revision 3.0.1 (2009-05-03):
+
+    - Fixed compatibility with pyrex.vim
+
 Revision 3.0.0 (2008-12-07):
 
     - Added support for non-ASCII identifiers;
@@ -11,6 +15,10 @@ Revision 3.0.0 (2008-12-07):
     - Removed builtins: "apply", "basestring", "buffer", "callable", "coerce",
       "execfile", "file", "help", "intern", "long", "raw_input", "reduce",
       "reload", "unichr", "unicode", "xrange";
+
+Revision 2.6.4 (2009-05-03):
+
+    - Fixed compatibility with pyrex.vim
 
 Revision 2.6.3 (2008-09-29):
 
