--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Revision 3.0.3 (2010-04-09):
+
+    - Applied patch by Andrea Riciputi with new configuration options
+      "python_highlight_builtin_objs" and "python_highligh_builtin_funcs"
+
 Revision 3.0.2 (2009-07-24):
 
     - Applied patch by Caleb Adamantine which fixes highlighting for decorators
