--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,8 @@
+Revision 3.0.5 (2010-11-11):
+
+    - Fixed highlighting for bytes. Patch by Anton Butanaev.
+    - Fixed highlighting for numbers.
+
 Revision 3.0.4 (2010-11-09):
 
     - Fixed highlighting for raw bytes literals. Patch by Anton Butanaev.
