--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Revision 3.0.6 (2010-11-14):
+
+    - Fixed highlighting for str.format syntax. Patch by Anton Butanaev.
+
 Revision 3.0.5 (2010-11-11):
 
     - Fixed highlighting for bytes. Patch by Anton Butanaev.
