--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Revision 3.3.2 (2013-06-01):
+
+   - Fixed behaviour of b:python_version_2 variable. Reported by Will Gray.
+
 Revision 3.3.1 (2013-05-12):
 
    - The script was moved to its own repository at
