--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,3 +1,7 @@
+Revision 3.3.4 (2013-08-11):
+
+    - Highlight True and False as booleans. Patch by Yuri Habrusiev.
+
 Revision 3.3.3 (2013-06-02):
 
    - More lightweight syntax reloading. Patch by Will Gray.
