--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,9 @@ Revision 3.3.5 (2013-08-31):
 
     - Highlight 'import', 'from' and 'as' as include statements.
       Patch by pydave at GitHub.
+    - Added new option 'python_highlight_file_headers_as_comments' (disabled by
+      default) to highlight shebang and coding file headers as comments.
+      Proposed by pydave at GitHub.
 
 Revision 3.3.4 (2013-08-11):
 
