--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -11,10 +11,10 @@ Revision 3.3.6 (2013-11-18):
 Revision 3.3.5 (2013-08-31):
 
     - Highlight 'import', 'from' and 'as' as include statements.
-      Patch by pydave at GitHub.
+      Patch by David Briscoe
     - Added new option 'python_highlight_file_headers_as_comments' (disabled by
       default) to highlight shebang and coding file headers as comments.
-      Proposed by pydave at GitHub.
+      Proposed by David Briscoe.
 
 Revision 3.3.4 (2013-08-11):
 
