--- a/AUTHORS
+++ b/AUTHORS
@@ -15,9 +15,11 @@ Ihor Gorobets
 Jeroen Ruigrok van der Werven
 John Eikenberry
 Joongi Kim
+lilydjwg
 Marc Weber
 Michael Doronin
 Neil Schemenauer
+nfnty
 Pedro Algarvio
 Victor Salgado
 Will Gray
